--- a/Team16_Milestone2_TrackAHike/app/src/main/AndroidManifest.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/AndroidManifest.xml
@@ -55,11 +55,7 @@
         </activity>
         <activity
             android:name=".StatTracking"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            android:exported="false">
         </activity>
         <activity
             android:name=".CameraActivity"
@@ -67,11 +63,6 @@
         <activity
             android:name=".Settings"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
     </application>
 
